# tortoise-tts

./: .gitignore  pyproject.toml  tryme.py
tortoise/: api.py  api_fast.py  client.py  do_tts.py  eval.py  get_conditioning_latents.py  is_this_from_tortoise.py  read.py  read_fast.py  socket_server.py  tts_stream.py
tortoise/models/: arch_util.py  autoregressive.py  classifier.py  clvp.py  cvvp.py  diffusion_decoder.py
tortoise/utils/: audio.py  typical_sampling.py  wav2vec_alignment.py
