[tool.poetry]
name = "tortoise-tts"
version = "0.1.0"
description = ""
authors = ["Fred Pirani <freonius@gmail.com>"]
readme = "README.md"
packages = [{ include = "tortoise" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26.4"
transformers = "^4.53.0"
torch = "^2.7.1"
tqdm = "^4.67.1"
rotary-embedding-torch = "^0.8.6"
einops = "^0.8.1"
tokenizers = "^0.21.2"
inflect = "^7.5.0"
progressbar = "^2.5"
unidecode = "^1.4.0"
scipy = "^1.16.0"
librosa = "^0.11.0"
ffmpeg = "^1.4"
numba = "^0.61.2"
torchaudio = "^2.7.1"
threadpoolctl = "^3.6.0"
llvmlite = "^0.44.0"
appdirs = "^1.4.4"
nbconvert = "^7.16.6"
tornado = "^6.5.1"
pydantic = "^2.11.7"
py-cpuinfo = "^9.0.0"
hjson = "^3.1.0"
psutil = "^7.0.0"
sounddevice = "^0.5.2"
spacy = "^3.8.7"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.1"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
